# pymulter

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml
pymulter/: __init__.py  pymulter.pyi
src/: lib.rs
tests/: test_pymulter.py
