[package]
name = "pymulter"
version = "0.1.0"
edition = "2021"
description = "Python bindings for Rust multer library"
authors = ["Aprila Hijriyan <april@kuli.dev>"]

[dependencies]
pyo3 = { version = "0.25", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.25", features = ["tokio-runtime"] }
tokio = {version = "1.40", features = ["rt-multi-thread", "macros", "sync"]}
multer = { version = "3.1.0", features = ["tokio"] }
futures = "0.3"
bytes = "1"

[lib]
crate-type = ["cdylib"]
