[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "pymulter"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/aprilahijriyan/pymulter"
documentation = "https://github.com/aprilahijriyan/pymulter"
repository = "https://github.com/aprilahijriyan/pymulter"

[tool.maturin]
features = ["pyo3/extension-module"]

[project.optional-dependencies]
tests = ["pytest", "pytest-asyncio"]
